# reference

./: .gitignore  README.md
python/src/advanced/webscraping/: multi.py  web.py
python/src/basics/: classes.py  controlflow.py  decorators.py  enums.py  exceptions.py  functions.py  generators.py  py_types.py  venvhowto.txt
python/src/modules/: collection.py  dates.py  debugging.py  files.py  maths.py  regex.py  tests.py  timing.py  zip.py
rust/: Cargo.toml
rust/src/: lib.rs  main.rs
rust/src/basics/: arrays.rs  controlflow.rs  datatypes.rs  enums.rs  errors.rs  functions.rs  loops.rs  mod.rs  strings.rs  structs.rs  tests.rs  traits.rs  tuples.rs
rust/src/collections/: hashmaps.rs  mod.rs  strings.rs  vectors.rs
rust/src/rustisms/: closures.rs  documentation.rs  iterators.rs  lifetimes.rs  macros.rs  mod.rs  oop.rs  patterns.rs  smartptrs.rs  threads.rs
rust/src/wasm/: Cargo.toml
rust/src/wasm/src/: lib.rs
rust/tests/: integration_test.rs
rust/tests/common/: mod.rs
ts/: package-lock.json  package.json  tsconfig.json
ts/src/basics/: classes.ts  interfaces.ts  types.ts
