[package]
name = "rust"
version = "0.1.0"
authors = ["Dave Dietrick <djdietrick@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Configure things for different build types
# Ex: opt-level controls the level of optimizations the compiler does on our code
# More optimizations means longer compile time but faster code
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3